--- a/jordanportfolio/src/pages/About/About.css
+++ b/jordanportfolio/src/pages/About/About.css
@@ -1,4 +1,4 @@
-.about {
+#about {
   font-size: 1.1em;
   background: #bdc3c7; /* fallback for old browsers */
   background: -webkit-linear-gradient(
