--- a/jordanportfolio/src/pages/Skills/Skills.css
+++ b/jordanportfolio/src/pages/Skills/Skills.css
@@ -7,7 +7,7 @@
 }
 
 .card-title {
-  font-size: 2em;
+  font-size: 20px;
   font-weight: 700;
 }
 
@@ -15,14 +15,16 @@
   width: 3em;
 }
 
-.font-details {
-  font-size: 3em;
-  font-weight: 500;
-  color: #231d5af8;
-}
-
-.font-details-b {
-  font-size: 3em;
-  font-weight: 500;
-  color: #ffffff;
+#skills {
+  background: #ece9e6; /* fallback for old browsers */
+  background: -webkit-linear-gradient(
+    to right,
+    #ffffff,
+    #ece9e6
+  ); /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(
+    to right,
+    #ffffff,
+    #ece9e6
+  ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 }
