--- a/jordanportfolio/src/pages/About/About.css
+++ b/jordanportfolio/src/pages/About/About.css
@@ -1,15 +1,15 @@
-#about {
+.about-section {
   font-size: 1.1em;
-  background: #bdc3c7; /* fallback for old browsers */
+  background: #ece9e6; /* fallback for old browsers */
   background: -webkit-linear-gradient(
     to right,
-    #2c3e50,
-    #bdc3c7
+    #ffffff,
+    #ece9e6
   ); /* Chrome 10-25, Safari 5.1-6 */
   background: linear-gradient(
     to right,
-    #2c3e50,
-    #bdc3c7
+    #ffffff,
+    #ece9e6
   ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 }
 
@@ -19,12 +19,4 @@
 
 .my-details {
   background-color: rgba(255, 255, 255, 0.747);
-}
-
-.font-details {
-    color: #ffffff;
-}
-
-.contact-item {
-  font-size: 20px;
 }
