--- a/jordanportfolio/src/pages/Projects/Projects.css
+++ b/jordanportfolio/src/pages/Projects/Projects.css
@@ -1,23 +1,34 @@
-
 .accordian-main {
-    cursor: pointer;
-    display: inline-block;
-    -webkit-text-decoration: none;
-    text-decoration: none;
-    font-size: 14px;
-    background-color: rebeccapurple;
-    border: none;
-    border-radius: 4px;
-  
-    padding: 10px;
-    color: #fff;
-  }
-  
-  .list-styles {
-    list-style-type: circle;
-  }
-  
-  .image-style1 {
-    width: 3em;
-  }
-  
+  cursor: pointer;
+  display: inline-block;
+  -webkit-text-decoration: none;
+  text-decoration: none;
+  font-size: 14px;
+  background-color: rebeccapurple;
+  border: none;
+  border-radius: 4px;
+  padding: 10px;
+  color: #fff;
+}
+
+.list-styles {
+  list-style-type: circle;
+}
+
+.image-style1 {
+  width: 3em;
+}
+
+#projects {
+  background: #ece9e6; /* fallback for old browsers */
+  background: -webkit-linear-gradient(
+    to right,
+    #ffffff,
+    #ece9e6
+  ); /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(
+    to right,
+    #ffffff,
+    #ece9e6
+  ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+}
